--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -8,10 +8,7 @@
     clear:both;
 }
 
-body{
-    background: url('../img/hojas.jpg');
-    background-attachment: fixed;
-}
+
 
 #global{
     width: 65%;
@@ -27,7 +24,7 @@ body{
     font-size: 28px;
     letter-spacing: 4px;
     line-height: 75px;
-    background: #235e3d;
+    
     color:white;
     text-align: center;
     width: 385px;
@@ -57,9 +54,6 @@ body{
     transition: all 300ms;
 }
 
-#menu ul li:hover{
-    background: #235e3d;
-}
 
 #menu a{
     display: block;
@@ -104,7 +98,6 @@ body{
     text-align: center;
     display: block;
     padding: 15px;
-    background: #235e3d;
     color:white;
     text-decoration: none;
     margin-top: 10px;
@@ -178,4 +171,43 @@ footer{
 
 .bx-wrapper, .bx-viewport{
     height: 250px !important;
+}
+
+#selector-theme{
+    position: fixed;
+    top:40%;
+    background: rgba(51, 51, 0.5);
+    width: 50px;
+    height: 100px;
+}
+
+#to-green,
+#to-red,
+#to-blue{
+    width: 25px;
+    height: 25px;
+    border: 1px solid white;
+    display:block;
+    margin: 0px auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+#to-green{
+    background: #235e3d;
+}
+
+#to-red{
+    background: #ca3413;
+}
+#to-blue{
+    background: #1f87c4;
+}
+
+.subir{
+    color: white;
+    text-decoration: none;
+    display: block;
+    float: right;
 }
