--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -75,9 +75,10 @@
     padding: 7px;
     
 }
-.post h2{
+h2{
     font-size: 30px;
     color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .post .date{
@@ -210,4 +211,14 @@ footer{
     text-decoration: none;
     display: block;
     float: right;
+}
+
+#box{
+    width: 60%;
+    float: left;
+    margin-top: 40px;
+}
+
+#acordeon{
+    margin-top: 20px;
 }
