--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -222,3 +222,14 @@ footer{
 #acordeon{
     margin-top: 20px;
 }
+
+#reloj{
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color:#333;
+    border: 5px dashed #333;
+    width: 30%;
+    padding: 30px;
+    margin: 0px auto;
+}
