--- a/proyecto-js/css/styles.css
+++ b/proyecto-js/css/styles.css
@@ -139,8 +139,10 @@ h2{
 
 
 form input[type="text"],
-form input[type="text"],
-form input[type="text"]{
+form input[type="password"],
+form input[type="email"],
+form input[type="number"],
+select{
     padding: 5px;
     border-radius: 2px;
     border:1px solid #ccc;
@@ -233,3 +235,26 @@ footer{
     padding: 30px;
     margin: 0px auto;
 }
+
+#form_contact{
+    width: 50%;
+    margin-top: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#form_contact label{
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.form-error{
+    float: right;
+    font-size: 11px;
+    background: red;
+    color: white;
+    padding: 10px;
+    width: 65%;
+}
+
